# pmalloc

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release-drafter.yml  release.yml
include/: arena.h  pmalloc.h
include/pmalloc/: type.h
sample/: CMakeLists.txt  CMakePresets.json  build.bat  build.sh  sample.c  sample.h
share/: pmalloc.h
share/pmalloc/: type.h
src/: aligned.c  arena.c  pcalloc.c  pfree.c  pmalloc.c  prealloc.c
